--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ version: 2.1
 executors:
   docker-publisher: 
     environment:
-      IMAGE_NAME: thdesous/cicd-webapp-nodejs
+      IMAGE_NAME: $DOCKERHUB_USERNAME/cicd-webapp-nodejs:latest
     docker:
       - image: circleci/node:latest
         auth:
@@ -21,9 +21,9 @@ jobs:
         - run: 
             name: Publish Docker Image to Docker Hub
             command: |
-              docker login -u "$DOCKERHUB_USERNAME" -p $DOCKERHUB_ACCESS_TOKEN
+              echo "${DOCKERHUB_PASS}" | docker login --username "${DOCKERHUB_USERNAME}" --password-stdin
               docker build -t $IMAGE_NAME .
-              docker push $IMAGE_NAME:latest
+              docker push $IMAGE_NAME
 
 workflows:
   version: 2
