--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,32 +1,52 @@
-orbs:
-  docker: circleci/docker@1.5.0
 version: 2.1
 
 executors:
-  docker-publisher: 
+  docker-publisher:
     environment:
-      IMAGE_NAME: thdesous/cicd-webapp-nodejs:latest
+      IMAGE_TAG: <username>/helloworld:latest
     docker:
-      - image: circleci/node:latest
-        auth:
-            username: $DOCKERHUB_USERNAME
-            password: $DOCKERHUB_ACCESS_TOKEN
+      - image: docker:stable
 
 jobs:
-    publishLatestToHub: 
-      executor: docker-publisher
-      steps: 
-        - checkout
-        - setup_remote_docker
-        - run: 
-            name: Publish Docker Image to Docker Hub
-            command: |
-              echo "${DOCKERHUB_PASS}" | docker login --username "${DOCKERHUB_USERNAME}" --password-stdin
-              docker build -t $IMAGE_NAME .
-              docker push $IMAGE_NAME
+  build:
+    executor: docker-publisher
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run:
+          name: Build Docker image
+          command: docker build --tag "${IMAGE_TAG}" .
+      - run:
+          name: Archive Docker image
+          command: docker save --output image.tar "${IMAGE_TAG}"
+      - persist_to_workspace:
+          root: .
+          paths:
+            - ./image.tar
+
+  push:
+    executor: docker-publisher
+    steps:
+      - setup_remote_docker
+      - attach_workspace:
+          at: /tmp/workspace
+      - run:
+          name: Load Docker image
+          command: docker load --input /tmp/workspace/image.tar
+      - run:
+          name: Publish Docker image
+          command: |
+            echo "${DOCKERHUB_PASS}" | docker login --username "${DOCKERHUB_USERNAME}" --password-stdin
+            docker push "${IMAGE_TAG}"
 
 workflows:
   version: 2
-  build-master:
+  build-push:
     jobs:
-      - publishLatestToHub
+      - build
+      - push:
+          requires:
+            - build
+          filters:
+            branches:
+              only: main
