Teste de nova configuracao para buildimage docker

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 executors:
   docker-publisher:
     environment:
-      IMAGE_TAG: <username>/helloworld:latest
+      IMAGE_TAG: thdesous/cicd-webapp-nodejs:latest
     docker:
       - image: docker:stable
 
