Alteracao .circleci/config.yml -  working_director

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ executors:
 
 jobs:
   build:
-    working_directory: /app
+    working_directory: ~/repo
     executor: docker-publisher
     steps:
       - checkout
