--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,53 +1,15 @@
 version: 2.1
-
-executors:
-  docker-publisher:
-    environment:
-      IMAGE_TAG: thdesous/cicd-webapp-nodejs:latest
-    docker:
-      - image: docker:stable
-
 jobs:
-  build:
-    working_directory: ~/repo
-    executor: docker-publisher
+  run_tests:
+    docker:
+      - image: circleci/node:14
     steps:
       - checkout
-      - setup_remote_docker
-      - run:
-          name: Build Docker image
-          command: docker build --tag "${IMAGE_TAG}" .
-      - run:
-          name: Archive Docker image
-          command: docker save --output image.tar "${IMAGE_TAG}"
-      - persist_to_workspace:
-          root: .
-          paths:
-            - ./image.tar
-
-  push:
-    executor: docker-publisher
-    steps:
-      - setup_remote_docker
-      - attach_workspace:
-          at: /tmp/workspace
-      - run:
-          name: Load Docker image
-          command: docker load --input /tmp/workspace/image.tar
-      - run:
-          name: Publish Docker image
+      - run: 
+          name: Install npm dependencies
           command: |
-            echo "${DOCKERHUB_PASS}" | docker login --username "${DOCKERHUB_USERNAME}" --password-stdin
-            docker push "${IMAGE_TAG}"
-
-workflows:
-  version: 2
-  build-push:
-    jobs:
-      - build
-      - push:
-          requires:
-            - build
-          filters:
-            branches:
-              only: main
+          npm install --save
+      - run: 
+          name: Start service
+          command: |
+          npm start
