--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,8 +22,8 @@ workflows:
   wf-deploy:
     jobs:
       - heroku/deploy-via-git:  
-          requires:
-            - job-test-installDependencies
+#          requires:
+#            - job-test-installDependencies
           filters:
             branches:
               only: main
