Adicionado job para teste de deploy no heroku

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ workflows:
   wf-deploy:
     jobs:
       - heroku/deploy-via-git:
-          filters:
-            branches:
-              only: main
+        working_directory: ~/app
+        filters:
+          branches:
+            only: main
