--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,9 @@ jobs:
           command: |
             npm install --save
 
+heroku/deploy-via-git:
+      working_directory: ~/app
+
 workflows:
   wf-test:
     jobs:
@@ -22,7 +25,6 @@ workflows:
   wf-deploy:
     jobs:
       - heroku/deploy-via-git:
-        working_directory: ~/app
-        filters:
-          branches:
-            only: main
+          filters:
+            branches:
+              only: main
