--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,10 @@
 version: 2.1
 orbs:
-  heroku: circleci/heroku@1.2.6 
+  heroku: circleci/heroku@0.0.10  
 
 jobs:
   job-test-installDependencies:
-    working_directory: ~/app
+    working_directory: ~/repo
     docker:
       - image: circleci/node:14
     steps:
@@ -13,24 +13,15 @@ jobs:
           name: Install npm dependencies
           command: |
             npm install --save
-  job-deploy-heroku:
-    working_directory: ~/app
-    docker:
-      - image: circleci/heroku:1.2.6 
-    steps:
-      - checkout    
-    
+
 workflows:
   wf-test:
     jobs:
       - job-test-installDependencies
 
-  wf-deploy:  
+  wf-deploy:
     jobs:
-      - job-deploy-heroku
       - heroku/deploy-via-git:
-          requires:
-            - job-deploy-heroku
           filters:
             branches:
               only: main
