--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,24 +1,29 @@
 version: 2.1
-
-orbs:
-  node: circleci/node@5.0.2
-
 jobs:
-  node-install-packages:
-    working_directory: /app
+  test:
     docker:
-      - image: cimg/base:stable
+      - image: cimg/node:15.1
     steps:
       - checkout
-      - node/install-packages
+      - restore_cache:
+          # See the configuration reference documentation for more details on using restore_cache and save_cache steps
+          # https://circleci.com/docs/2.0/configuration-reference/?section=reference#save_cache
+          keys:
+            - node-deps-v1-{{ .Branch }}-{{checksum "package-lock.json"}}
+      - run:
+          name: install packages
+          command: npm ci
+      - save_cache:
+          key: node-deps-v1-{{ .Branch }}-{{checksum "package-lock.json"}}
+          paths:
+            - ~/.npm
+      - run:
+          name: Run Tests
+          command: npm run test
 
+# Invoke jobs via workflows
+# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  wf-pipeline:
+  my-workflow:
     jobs:
-      - node-install-packages
-      - node/run:
-          app-dir: /app
-      - node/test:
-          app-dir: /app
-          run-command: test
-          test-results-for: jest
+      - test
