--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,24 +5,16 @@ jobs:
       - image: cimg/node:15.1
     steps:
       - checkout
-      - restore_cache:
-          # See the configuration reference documentation for more details on using restore_cache and save_cache steps
-          # https://circleci.com/docs/2.0/configuration-reference/?section=reference#save_cache
-          keys:
-            - node-deps-v1-{{ .Branch }}-{{checksum "package-lock.json"}}
       - run:
-          name: install packages
-          command: npm ci
-      - save_cache:
-          key: node-deps-v1-{{ .Branch }}-{{checksum "package-lock.json"}}
-          paths:
-            - ~/.npm
+          name: Install packages
+          command: npm install
+      - run:
+          name: Run App
+          command: npm start
       - run:
           name: Run Tests
           command: npm run test
 
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   my-workflow:
     jobs:
