--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,9 @@ jobs:
       - run:
           name: Install packages
           command: npm install
-      - run:
-          name: Run App
-          command: npm start
+      # - run:
+      #     name: Run App
+      #     command: npm start
       - run:
           name: Run Tests
           command: cd npm test
