--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
           command: |
             ls -al
             pwd
+            cat package.json
 
       - run:
           name: Run Tests
