--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,7 @@ jobs:
     steps:
       - checkout
       - node/install-packages:
-          app-dir: /app
-          cache-path: ~/project/node_modules
+          cache-path: ~/app/node_modules
           override-ci-command: npm install
       - run: sudo npm install -g npm@latest
       - run: npm run test
