--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,11 @@
-version: 2.1
-orbs:
-  node: circleci/node@5.0.2
 jobs:
-  test:
-    executor: node/default
+  example-job:
+    docker:
+      # replace with your preferred image
+      - image: cimg/base:stable
     steps:
-      - checkout
-      - node/install-packages:
-          cache-path: ~/app/node_modules
-          override-ci-command: npm install
-      - run: sudo npm install -g npm@latest
-      - run: npm run test
+      - node/install
 workflows:
-  test_my_app:
+  example-workflow:
     jobs:
-      - test
+      - example-job
