--- a/app/package.json
+++ b/app/package.json
@@ -3,14 +3,19 @@
   "version": "1.0.0",
   "description": "Node.js on Docker",
   "author": "Thiago de Sousa Pereira",
-  "main": "server.js",
+  "main": "app.js",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
-    "start": "node server.js",
-    "test": "jest"
+    "start": "node app.js",
+    "test": "mocha"
   },
   "dependencies": {
-    "express": "^4.16.1",
-    "jest": "^26.6.3",
-    "supertest": "^6.1.3"
+    "ejs": "^2.6.1",
+    "express": "^4.16.4",
+    "mocha": "^9.2.2",
+    "mochawesome": "^7.1.3",
+    "request": "^2.88.0"
   }
 }
