Alteracao na estrutura circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,19 @@
 version: 2.1
-orbs:
-  node: circleci/node@5.0.2
-  
 jobs:
-  example-job:
+  run_tests:
     docker:
-      # replace with your preferred image
-      - image: cimg/base:stable
+      - image: circleci/node:12
     steps:
-      - node/install
-workflows:
-  example-workflow:
-    jobs:
-      - example-job
+      - checkout
+      - run:
+          name: Install npm dependencies
+          command: |
+            npm install --save
+      - run:
+          name: Run Unit Tests
+          command: |
+            ./node_modules/mocha/bin/mocha test/ --reporter mochawesome --reporter-options reportDir=test-results,reportFilename=test-results
+      - store_test_results:
+          path: test-results
+      - store_artifacts:
+          path: test-results
