--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,8 @@
 version: 2.1
+orbs:
+  node: circleci/node@5.0.2
 jobs:
-  run_tests:
+  install-dependencies:
     docker:
       - image: circleci/node:12
     steps:
@@ -9,11 +11,10 @@ jobs:
           name: Install npm dependencies
           command: |
             npm install --save
-      - run:
-          name: Run Unit Tests
-          command: |
-            npm test
-      #       ./app/node_modules/mocha/bin/mocha ./app/test/ --reporter mochawesome --reporter-options reportDir=test-results,reportFilename=test-results
+      # - run:
+      #     name: Run Unit Tests
+      #     command: |
+      #       ./node_modules/mocha/bin/mocha test/ --reporter mochawesome --reporter-options reportDir=test-results,reportFilename=test-results
       # - store_test_results:
       #     path: test-results
       # - store_artifacts:
@@ -21,6 +22,10 @@ jobs:
 
 
 workflows:
-  build_test:
+  my-workflow:
     jobs:
-      - run_tests
+      - install-dependencies
+      - node/test:
+          test-results-for: mocha 
+          test-results-path: test-results 
+          app-dir: /test
