--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,8 @@
     "express": "^4.16.4",
     "mocha": "^9.2.2",
     "mochawesome": "^7.1.3",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "mocha-junit-reporter":"2.0.2", 
+    "mocha-multi":"1.1.6"
   }
 }
