--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,6 @@ jobs:
       - run:
           name: Install npm dependencies
           command: |
-            npm cache clean --force
             npm install --save
       # - run:
       #     name: Run Unit Tests
@@ -27,6 +26,7 @@ workflows:
     jobs:
       - install-dependencies
       - node/test:
+          run-command: npm cache clean --force
           test-results-for: mocha 
           test-results-path: ~/project/app/test/test-results 
           app-dir: ~/project/app
