--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,10 +10,11 @@ jobs:
       - node/install-packages:
           app-dir:  ~/project/app
           pkg-manager: npm
-      - run:
-          app-dir:  ~/project/app
+      - run:         
           name: Run tests
-          command: npm test
+          command: |
+          cd app/
+          npm test
       - store_test_results:
           path: ~/project/app/test/test-results
 
