--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,10 +14,15 @@ jobs:
           name: Run tests
           command: |
             cd app/
-            npm test --reporter mocha-junit-reporter
+            mkdir test
+            mocha test --reporter mocha-junit-reporter
+          environment:
+            MOCHA_FILE: test/test-results.xml
+          when: always
       - store_test_results:
-          path: ~/project
-      
+          path: test
+      - store_artifacts:
+          path: test      
 
 workflows:
   my-workflow:
