--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           name: Run tests
           command: |
             cd app/
-            mocha test --reporter mocha-junit-reporter
+            npm test --reporter mocha-junit-reporter
           environment:
             MOCHA_FILE: ~/project/app/test/test-results.xml
           when: always
