--- a/app/package.json
+++ b/app/package.json
@@ -6,17 +6,18 @@
   "main": "app.js",
   "directories": {
     "test": "test"
+    
   },
   "scripts": {
     "start": "node app.js",
-    "test": "mocha"
-  },
+    "test": "mocha 'test/**/*.js' --recursive --reporter mocha-junit-reporter --reporter-options mochaFile=./test/test_result.xml --timeout 60000 --exit"
+    },
   "dependencies": {
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "mocha": "^9.2.2",
     "request": "^2.88.0",
-    "mocha-junit-reporter":"2.0.2", 
-    "mocha-multi":"1.1.6"
+    "mocha-junit-reporter": "2.0.2",
+    "mocha-multi": "1.1.6"
   }
 }
