--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,10 +14,7 @@ jobs:
           name: Run tests
           command: |
             cd app/
-            npm test --reporter mocha-junit-reporter
-          environment:
-            MOCHA_FILE: ~/project/app/test/test-results.xml
-          when: always
+            npm test
       - store_test_results:
           path: ~/project/app/test
       - store_artifacts:
