--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
     docker:
       - image: cimg/node:16.10
     steps:
+      - checkout
       - node/install-packages:
           app-dir:  ~/project/app
           pkg-manager: npm
