--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,10 +25,11 @@ jobs:
       IMAGE_NAME: thedesous/cicd-webapp-nodejs
     docker:
       - image: circleci/buildpack-deps:stretch
+    app-dir:  ~/project/app
     steps:
       - checkout
       - setup_remote_docker
-      - run:
+      - run:         
           name: Build Docker image
           command: docker build -t $IMAGE_NAME:latest .
 
