--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,9 @@ jobs:
       - setup_remote_docker
       - run:         
           name: Build Docker image
-          command: docker build -t $IMAGE_NAME:latest .
+          command: |
+            cd app/
+            docker build -t $IMAGE_NAME:latest .
 
   # deploy:  
   #   docker:
