--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -9,6 +9,7 @@ WORKDIR /usr/src/app
 # Install app dependencies
 COPY package*.json ./
 RUN npm install
+RUN npm audit fix
 
 # Bundle app source
 COPY . .
