--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,9 @@ jobs:
       IMAGE_NAME: thdesous/cicd-webapp-nodejs
     docker:
       - image: cimg/base:stable
+        auth:
+          username: $DOCKERHUB_USERNAME
+          password: $DOCKERHUB_PASS
     steps:
       - setup_remote_docker
       - run:
