--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,7 @@ jobs:
           username: $DOCKERHUB_USERNAME
           password: $DOCKERHUB_PASS
     steps:
+      - checkout
       - setup_remote_docker
       - run:
           name: Publish Docker Image to Docker Hub
