--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
             - ./image.tar            
 
   publish-image:
-    executor: docker-publisher
+    executor: docker-executor
     steps:
       - attach_workspace:
           at: /tmp/workspace
